<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Popular Movies</string>
    <string name="Popular">Sort By Popular Movies</string>
    <string name="Top">Sort By Top Movies</string>
    <string name="Favorite">Show Favorite Movies</string>

    <!-- API KEY GOES HERE -->
    <string name="api_key"></string>
    <!-- API KEY GOES HERE -->

    <string name="Reviews">Reviews</string>
    <string name="Trailers">Trailers</string>
    <string name="Ratings">Ratings</string>
    <string name="ReleaseDate">Release Date</string>
    <string name="synopsis">Synopsis</string>
    <string name="OriginalTitle">Original Title</string>
    <string name="hyphen10">/10</string>
    <string name="UnableToGetTheMovieData">Unable to Get the Movie Data</string>
    <string name="UnableToConnectToInternet">Unable to Connect to Internet</string>
    <string name="NoMovieReviewsFound">No Movie Reviews Found</string>
    <string name="NoYouTubeTrailersFound">No YouTube Trailers Found</string>
    <string name="TryAgain">Try Again</string>
    <string name="YouTubeURL">"http://www.youtube.com/watch?v="</string>
    <string name="PopularMovieTitle">Popular Movies</string>
    <string name="TopMovieTitle">Top Movies</string>
    <string name="FavoriteMovieTitle">Favorite Movies</string>
    <string name="NoMovieFound">No Movie Found</string>
    <string name="NoFavoriteMovieFound">No Favorite Movie Found</string>
    <string name="TrailerNo">Trailer #<xliff:g id="condition">%1$s</xliff:g></string>

    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
      - Used for Accessibility purposes (Accessibility == a11y)                            -
      -                                                                                    -
      - Fun Fact: Accessibility is abbreviated a11y because accessibility starts with 'a', -
      - followed by 11 letters, and then a 'y'. It is pronounced alley, like an alley cat. -
      - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->

    <string name="MoviePoster_a11y">Poster of the Movie : <xliff:g id="name">%1$s</xliff:g></string>
    <string name="ButtonTryAgain_a11y">Connect to Internet and Click Try Again Button!</string>
    <string name="YoutubeTrailer_a11y">Youtube Trailer</string>
    <string name="AddToFavoriteFAB_a11y">Action Button to add movie to Favorites</string>
    <string name="DeleteToFavoriteFAB_a11y">Action Button to delete movie from Favorites</string>
    <string name="MovieReviewerName_a11y">Name of the Movie\'s Reviewer is <xliff:g id="author">%1$s</xliff:g>. Click here to go to Website</string>
    <string name="MovieNameFrame_a11y">Name of the movie is <xliff:g id="movie">%1$s</xliff:g>. Click here to see full Movie\'s Details</string>
</resources>
