<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMaterialGreen"
            android:padding="@dimen/textViewLabelPadding"
            android:text="@string/Trailers"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewYouTubeTrailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:minHeight="@dimen/recyclerViewMinHeight"
            android:orientation="horizontal"
            android:padding="@dimen/dp5"
            android:scrollbars="horizontal"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMaterialGreen"
            android:padding="@dimen/textViewLabelPadding"
            android:text="@string/Reviews"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewYouTubeTrailers" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewMovieReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:minHeight="@dimen/recyclerViewMinHeight"
            android:orientation="horizontal"
            android:padding="@dimen/dp5"
            android:scrollbars="horizontal"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />


        <ProgressBar
            android:id="@+id/progressBarYouTubeTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textViewNoYouTubeTrailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin8dp"
            android:text="@string/NoYouTubeTrailersFound"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textViewErrorLoading"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin8dp"
            android:text="@string/UnableToConnectToInternet"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/buttonTryAgain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/buttonTryAgain"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin8dp"
            android:contentDescription="@string/ButtonTryAgain_a11y"
            android:text="@string/TryAgain"
            android:textColor="@color/colorMaterialGreen"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewErrorLoading" />

        <ProgressBar
            android:id="@+id/progressBarMovieReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerViewMovieReviews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textViewNoReviewsFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin8dp"
            android:text="@string/NoMovieReviewsFound"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerViewMovieReviews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />
    </android.support.constraint.ConstraintLayout>
</layout>